--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "laravel/framework": "^8.37|^9.0|^10.0"
+        "laravel/framework": "^8.37|^9.0|^10.0",
+        "AlexGh12/backup-in-git": "dev-master"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10"
@@ -23,9 +24,9 @@
     },
     "extra": {
         "branch-alias": {
-            "master": "1.0"
+            "dev-master": "1.0"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
