--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "AlexGh12/backup-in-git",
+    "name": "alexgh12/backup-in-git",
     "description": "Comando para backup de base de datos en Laravel y sube cambios a un repositorio git",
     "keywords": ["backup database","in-git","in-laravel"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Alex G'h",
+            "name": "Alex Gh",
             "email": "a-l-e-x_1379@hotmail.com"
         }
     ],
@@ -17,8 +17,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "laravel/framework": "^8.37|^9.0|^10.0",
-        "AlexGh12/backup-in-git": "dev-master"
+        "laravel/framework": "^8.37|^9.0|^10.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10"
