--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "extra": {
         "branch-alias": {
-            "master": "master"
+            "master": "1.0"
         }
     },
     "minimum-stability": "stable",
