--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "laravel/framework": "^8.37|^9.0|^10.0"
+        "laravel/framework": "^7.0|^8.37|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
