--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 			}
 		},
 		"branch-alias": {
-            "1.x-dev": "1.x"
+            "1.x": "1.x-dev"
         }
     },
     "minimum-stability": "stable",
